docs/4.20/virt/creating_vms_advanced/virt-creating-vms-from-cli.md
You can create virtual machines (VMs) from the command line by editing or creating a `VirtualMachine` manifest. You can simplify VM configuration by using an instance type in your VM manifest.

<div class="note">

You can also create VMs from instance types by using the OpenShift Container Platform web console.

</div>

# Creating a VM from a VirtualMachine manifest

You can create a virtual machine (VM) from a `VirtualMachine` manifest. To simplify the creation of these manifests, you can use the `virtctl` command-line tool.

- You have installed the `virtctl` CLI.

- You have installed the OpenShift CLI (`oc`).

1.  Create a `VirtualMachine` manifest for your VM and save it as a YAML file. For example, to create a minimal Red Hat Enterprise Linux (RHEL) VM, run the following command:

    ``` terminal
    $ virtctl create vm --name rhel-9-minimal --volume-import type:ds,src:openshift-virtualization-os-images/rhel9
    ```

2.  Review the `VirtualMachine` manifest for your VM:

    <div class="note">

    This example manifest does not configure VM authentication.

    </div>

    <div class="formalpara-title">

    **Example manifest for a RHEL VM**

    </div>

    ``` yaml
    apiVersion: kubevirt.io/v1
    kind: VirtualMachine
    metadata:
      name: rhel-9-minimal
    spec:
      dataVolumeTemplates:
      - metadata:
          name: imported-volume-mk4lj
        spec:
          sourceRef:
            kind: DataSource
            name: rhel9
            namespace: openshift-virtualization-os-images
          storage:
            resources: {}
      instancetype:
        inferFromVolume: imported-volume-mk4lj
        inferFromVolumeFailurePolicy: Ignore
      preference:
        inferFromVolume: imported-volume-mk4lj
        inferFromVolumeFailurePolicy: Ignore
      runStrategy: Always
      template:
        spec:
          domain:
            devices: {}
            memory:
              guest: 512Mi
            resources: {}
          terminationGracePeriodSeconds: 180
          volumes:
          - dataVolume:
              name: imported-volume-mk4lj
            name: imported-volume-mk4lj
    ```

    - The VM name.

    - The boot source for the guest operating system.

    - The namespace for the boot source. Golden images are stored in the `openshift-virtualization-os-images` namespace.

    - The instance type is inferred from the selected `DataSource` object.

    - The preference is inferred from the selected `DataSource` object.

3.  Create a virtual machine by using the manifest file:

    ``` terminal
    $ oc create -f <vm_manifest_file>.yaml
    ```

4.  Optional: Start the virtual machine:

    ``` terminal
    $ virtctl start <vm_name>
    ```

# Additional resources

- [Configuring SSH access to virtual machines](../../virt/managing_vms/virt-accessing-vm-ssh.xml#virt-accessing-vm-ssh)

- [Creating virtual machines from instance types](../../virt/creating_vm/virt-creating-vms-from-instance-types.xml#virt-creating-vms-from-instance-types)
